2007-08-14  Inge Wallin  <inge@lysator.liu.se>

	Krazy issue 11: Constructors should be declared explicit
	* src/lib/gps/GpsLayer.h (class GpsLayer),
	* src/lib/gps/GpsTracking.h (class GpsTracking): do it.

	Maintain binary forward compatibility through d-pointer
	* src/lib/MarbleControlBox.h: Move private member into private
	class in cpp file.
	* src/lib/MarbleControlBox.cpp (class MarbleControlBoxPrivate):
	m_mapthememodel: new member

2007-08-14  Torsten Rahn  <rahn@kde.org>

	* src/lib/GeoPolygon.cpp:
	Make Marble work with PowerPC.
	Patch passed on by 
	Steffen Joeris <steffen.joeris@skolelinux.de>

2007-08-14  Torsten Rahn  <rahn@kde.org>

	* src/lib/MarbleWidget.{cpp,h}:
        Adding method stub to configure MarbleDataDir

	* src/lib/TileCreator.{cpp,h}:
	Adding lots of more qDebugs to catch some 
	possible errors and safer coding. 
	Fix for the case where the image is smaller than
	2 * tileSize x tileSize.

2007-08-14  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/TileCreator.cpp (createTiles): Fix all warnings

	Fix the TileCreator that apparently got destroyed some time ago.
	* src/lib/TileCreator.cpp (createTiles): Fix infinite loop due to
	test of unsigned number against >= 0.
	(createTiles): fix wrong test of initial tile size.

2007-08-13  Torsten Rahn  <rahn@kde.org>
	
    * src/lib/TileCreator.{cpp,h}: 
    Add a return value to createTiles ...

2007-08-13  Torsten Rahn  <rahn@kde.org>
	
    * src/lib/MarbleControlBox.ui: 
    Make it compile with Qt 4.2 again.

2007-08-13  Andrew Manson   <g.real.ate@gmail.com>

    Added File View Tab to the Marble Control box as a view to the 
    GpxFileModel. The tab is disabled by default and needs command
    line arg --enableFileView to see.
    * src/kdemain.cpp: cmd line arg
    * src/katlascontrol.cpp : new method to enable/disable File view
    * src/lib/MarbleControlBox.ui : new tab
    
    Added a GpxFileModel to MarbleModelPrivate and added nessary 
    accessors.